--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "google-auth-library": "^7.14.1",
+        "handlebars": "^4.7.8",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.8",
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "multer-s3": "^2.10.0",
+        "nodemailer": "^6.9.6",
         "razorpay": "^2.8.1",
         "validator": "^13.7.0"
     }
